feat: add picture element and srcset attributes to header image given in ud-review

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 </head>
 <body>
   <header class="introduction">
+    <picture>
+      <source media="(min-width: 750px)" srcset="./images/pf.jpg">
+      <source media="(min-width: 465px)" srcset="./images/pf-2.jpg">
+      <img class= "background-image" src="./images/pf-1.jpg" alt="header img">
+    </picture>
     <span class="name">sv</span>
     <h1 class="hello">Hello.</h1>
     <h2>I'm sugunav.</h2>
-    <p>A front-end web developer.</p> 
+    <p>A front-end web developer.</p>
+    <a href="#portfolio" class="button">portfolio</a>
   </header>
 
   <h1 class="portfolio-title">portfolio</h1>
@@ -26,14 +32,14 @@
       <h2 class="title">pixel art maker</h2>
       <a class="app-link" href="https://codepen.io/sugunav/full/KRROQE" target="_blank">view app</a>
     </div>
-  
+
     <div class="project">
       <img class="image" src="https://images.unsplash.com/photo-1521129529345-d4e9a83352b6?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=2e6e47a5ac24a4ae6cf55bba6888da0c" alt="animal card">
       <a href="https://github.com/vsuguna" target="_blank"><i class="fa fa-github"></i></a>
       <h2 class="title">animal card</h2>
       <a class="app-link" href="https://codepen.io/sugunav/full/jZQxQK" target="_blank">view app</a>
     </div>
-  
+
     <div class="project">
       <img class="image" src="https://images.unsplash.com/photo-1511632765486-a01980e01a18?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=e8887578f43a5df8950231001658c403" alt="udabuddy">
       <a href="https://github.com/vsuguna" target="_blank"><i class="fa fa-github"></i></a>
