--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <h1 class="hello">Hello.</h1>
     <h2>I'm sugunav.</h2>
     <p>A front-end web developer.</p>
-    <a href="#portfolio" class="button">portfolio</a>
+    <a href="#portfolio-section" class="button">portfolio</a>
   </header>
 
   <h1 class="portfolio-title">portfolio</h1>
 
-  <section class="portfolio">
+  <section class="portfolio" id="portfolio-section">
     <div class="project">
       <img class="image" src="https://images.unsplash.com/photo-1453814235491-3cfac3999928?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=160e9131470e3353a32b153f5bf5ce90" alt="pixel art maker">
       <a href="https://github.com/vsuguna" target="_blank"><i class="fa fa-github"></i></a>
